--- a/style.css
+++ b/style.css
@@ -2,226 +2,222 @@ html{
   height: 100%;  
 }
 
-body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-        }
-        .header {
-            background: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-        .category-list {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
-        .category-list a {
-            text-decoration: none;
-            color: #fff;
-            background: #555;
-            padding: 15px 30px;
-            border-radius: 5px;
-            font-size: 18px;
-        }
-        .category-list a:hover {
-            background: #777;
-        }
-.container {
-            width: 80%;
-            margin: auto;
-        }
-        .header {
-            background: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-        .menu-item {
-            background: #fff;
-            margin: 10px 0;
-            padding: 15px;
-            border-radius: 5px;
-            box-shadow: 0 0 5px rgba(0,0,0,0.1);
-        }
-        .menu-item a {
-            text-decoration: none;
-            color: #333;
-            font-size: 18px;
-        }
-        .menu-item a:hover {
-            color: #007BFF;
-        }
-.backgroung img{
-     background-image:url(images/background1.jpg);
-    background-position:center;
+body{
+    font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    
+    height: 100%;
+}
+
+.body-home{
+   background-image:url("images/background-01-port.png");
+   background-position:center;
+   background-attachment: fixed;
+   background-repeat: no-repeat;
+   background-size: cover;
+}
+.body-meals{
+   background-image:url("images/background-02-port.png");
+   background-position:center;
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
 }
 
+/**********HEARDER*****/
 
-.menu-item i {
-    float: right;
-    padding-right: 50px;
-}
-
-=============/STARTERS PAGE/=========
-
-.container {
-            width: 80%;
-            margin: auto;
-        }
-        .header {
-            background: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-        .meal-details {
-            background: #fff;
-            padding: 20px;
-            border-radius: 5px;
-            margin-top: 20px;
-            box-shadow: 0 0 5px rgba(0,0,0,0.1);
-        }
-        .meal-details img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 5px;
-        }
-        .extras {
-            margin-top: 20px;
-        }
-        .extras input[type="checkbox"] {
-            margin-right: 10px;
-        }
-        .form-group {
-            margin: 20px 0;
-        }
-        .form-group textarea {
-            width: 100%;
-            height: 100px;
-            padding: 10px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-        }
-        .button {
-            display: block;
-            width: 100%;
-            background: #007BFF;
-            color: #fff;
-            border: none;
-            padding: 15px;
-            border-radius: 5px;
-            font-size: 18px;
-            cursor: pointer;
-            text-align: center;
-            text-decoration: none;
-        }
-        .button:hover {
-            background: #0056b3;
-        }
-
-
-===============/MEALS PAGE/===========
-
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background:pink;
-}
-
-header {
-    background: #444;
-    color: #fff;
-    padding: 1rem;
+.header{
+    background-color: #2196f3;
+    
+    width: 100%;
+    height: 50px;
+    top: 0;
+    
+    position:fixed;
+    overflow:visible;
+    
     text-align: center;
+    
 }
 
-.meal-details {
-            background:#fff;
-            padding: 20px;
-            border-radius: 5px;
-            margin-top: 20px;
-            box-shadow: 0 0 5px rgba(0,0,0,0.1);
-        }
-        .meal-details img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 5px;
-        }
-        .extras {
-            margin-top: 20px;
-        }
-        .extras input[type="checkbox"] {
-            margin-right: 10px;
-        }
-        .form-group {
-            margin: 20px 0;
-        }
-        .form-group textarea {
-            width: 100%;
-            height: 100px;
-            padding: 10px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-        }
-        .button {
-            display: block;
-            width: 100%;
-            background: #007BFF;
-            color: #fff;
-            border: none;
-            padding: 15px;
-            border-radius: 5px;
-            font-size: 18px;
-            cursor: pointer;
-            text-align: center;
-            text-decoration: none;
-        }
-        .button:hover {
-            background: #0056b3;
-        }
+.header i{
+    float: left;
+    padding: 17px 0px 0px 17px;
+    color: #ffffff;
+    
+}
+
+.header img{
+    width: 150px;
+    padding-top: 14px;
+    padding-right: 25px;
+}
+
+/**********HOME PAGE*****/
+
+#home-logo-img{
+    width: 50px;
+    display: block;
+    margin: auto;
+}
+
+#home-logo-text-img{
+    width: auto;
+    display: block;
+    margin: auto;
+}
+/******** HOME PAGE MENU*****/
+.home-menu-item{
+    text-decoration: none;
+    text-transform: uppercase;
+    
+    color:#ffffff;
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
+    border: 5px solid black;
+    
+    display: block;
+    margin: auto;
+    margin-bottom: 10px;
+    width: 80%;
+}
 
 
+/**********MEALS PAGE*****/
+
+#meals{
+    padding-top: 50px;
+}
+
+/**********MEALS PAGE MENU*****/
+.meals-list a{
+    text-decoration: none;
+}
+
+.meals-list-items{
+    border: 5px solid #1a1a1a;
+    margin: 10px;
+}
+
+.meals-list-items h1{
+    font-weight: bold;
+    font-size: 20px;
+    color: #1a1a1a;
+    padding-left: 10px;
+    
+}
+
+.meals-list-items i{
+    float: right;
+    color: #1a1a1a;
+    padding: 10px;
+}
+
+.meals-list-items p{
+    font-size: 15px;
+    font-style: italic;
+    color: #4d4d4d;
+    margin-top: -7px;
+    padding-left: 10px;
+}
 
 
+/**********RECIPE PAGE*****/
 
-==========/THANK YOU PAGE/=========
+#recipe{
+    padding-top: 50px;
+}
 
-.container {
-            width: 80%;
-            margin: auto;
-            text-align: center;
-            padding: 50px 0;
-        }
-        .header {
-            background: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-        .button {
-            display: inline-block;
-            background: #007BFF;
-            color: #fff;
-            padding: 15px 30px;
-            border-radius: 5px;
-            text-decoration: none;
-            font-size: 18px;
-            cursor: pointer;
-        }
-        .button:hover {
-            background: #0056b3;
-        }
+/**********RECIPE DETAILS*****/
+.recipe-details img{
+    width: 100%;
+    
+}
 
+.recipe-details h1{
+    font-size: 25px;
+    text-align: center;
+    border: 5px solid #1a1a1a;
+    margin: 10px;
+    padding: 5px;
+}
+
+.recipe-details h2{
+    font-size: 20px;
+    text-align: left;
+    margin: 0;
+    margin-left: 10px;
+}
+
+.recipe-details-info{
+    margin-left: 25px;
+    margin-right: 25px;
+}
+
+.recipe-details-info p{
+    font-size: 13px;
+    display: inline-block;
+}
+
+.recipe-details-ingredients-label{
+    line-height: 25px;
+    margin-left: 10px;
+}
+
+.recipe-details-steps{
+    padding-top: 20px;
+}
+
+.recipe-details-ol{
+   padding-left: 28px; 
+}
+
+/********** RESPONSIVE LAYOUT *****/
+@media only screen and(min-width:600px) {
+    #meals{
+        width: 80%;
+        margin: auto;
+    }
+    
+    #recipe{
+        width: 80%;
+        margin: auto;
+    }
+    
+}
+
+@media only screen and(min-width:1000px) {
+      #meals{
+        width: 60%;
+        margin: auto;
+    }
+    
+    #recipe{
+        width: 60%;
+        margin: auto;
+    }
+}
+
+@media only screen and(min-width:1500px) {
+      #meals{
+        width: 40%;
+        margin: auto;
+    }
+    
+    #recipe{
+        width: 40%;
+        margin: auto;
+    }
+}
+
+@media only screen and(min-width:720px) {
+    .body-home{
+        background-image: url('images/background-01-land.png');
+    }
+    
+    .body-meals{
+        background-image: url('images/background-02-land.png');
+    }
+}
